--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <h1>Hello!</h1>
+<a href="plex.charleszwicker.com">Watch Movies/TV!</a>
+<a href="ombi.charleszwicker.com">Request a movie/TV show!</a>
