--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <h1>Hello!</h1>
 <a href="plex.charleszwicker.com">Watch Movies/TV!</a>
+<a href="app.synclounge.tv">Watch movies together!</a>
 <a href="ombi.charleszwicker.com">Request a movie/TV show!</a>
