--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <h1>Hello!</h1>
 <p>
-  <a href="plex.charleszwicker.com">Watch Movies/TV!</a>
+  <a href="https://plex.charleszwicker.com">Watch Movies/TV!</a>
 </p>
 <p>
-  <a href="app.synclounge.tv">Watch movies together!</a>
+  <a href="https://sync.charleszwicker.com">Watch movies together!</a>
 </p>
 <p>
-  <a href="ombi.charleszwicker.com">Request a movie/TV show!</a>
+  <a href="https://ombi.charleszwicker.com">Request a movie/TV show!</a>
 </p>
