--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <h1>Hello!</h1>
 <p>
-  <a href="https://plex.charleszwicker.com">Watch Movies/TV!</a>
+  <a href="https://plex.zwicker.me">Watch Movies/TV!</a>
 </p>
 <p>
-  <a href="https://sync.charleszwicker.com">Watch movies together!</a>
-</p>
-<p>
-  <a href="https://ombi.charleszwicker.com">Request a movie/TV show!</a>
+  <a href="https://ombi.zwicker.me">Request a movie/TV show!</a>
 </p>
